--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,7 @@ default: &default
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: felipe
-  password: 1Nf0place*
+  password: <%= ENV.fetch("DB_PASSWORD_TEST") %>
   host: localhost
 
 
@@ -27,7 +27,7 @@ development:
   <<: *default
   database: catalogo_filmes_development
   username: felipe
-  password: 1Nf0place*
+  password:  <%= ENV.fetch("DB_PASSWORD_TEST") %>
   
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
@@ -63,7 +63,7 @@ test:
   <<: *default
   database: catalogo_filmes_test
   username: felipe
-  password: 1Nf0place*
+  password:  <%= ENV.fetch("DB_PASSWORD_TEST") %>
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
 # ever seen by anyone, they now have access to your database.
