--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -1,11 +1,13 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
+# test/fixtures/users.yml (Exemplo CORRIGIDO)
+felipe:
+  email: felipe@example.com
+  # Use o método para hash de senha do Devise.
+  # Ex: <%= Devise::Encryptor.digest('password') %>
+  # Ou, se o seu User model tem `has_secure_password`:
+  encrypted_password: <%= Devise::Encryptor.digest('password') %>
+  confirmed_at: <%= Time.current %> # Se você usa confirmação de email
 
-# This model initially had no columns defined. If you add columns to the
-# model remove the "{}" from the fixture names and add the columns immediately
-# below each fixture, per the syntax in the comments below
-#
-one: {}
-# column: value
-#
-two: {}
-# column: value
+maria:
+  email: maria@example.com
+  encrypted_password: <%= Devise::Encryptor.digest('password') %>
+  confirmed_at: <%= Time.current %>
