--- a/test/fixtures/genres.yml
+++ b/test/fixtures/genres.yml
@@ -1,7 +1,11 @@
-# Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
-
-one:
-  name: MyString
-
-two:
-  name: MyString
+# test/fixtures/genres.yml
+action:
+  name: Action
+comedy:
+  name: Comedy
+drama:
+  name: Drama
+horror:
+  name: Horror
+science_fiction:
+  name: Science Fiction
