--- a/config/database.yml
+++ b/config/database.yml
@@ -18,24 +18,23 @@ default: &default
   # For details on connection pooling, see Rails configuration guide
   # https://guides.rubyonrails.org/configuring.html#database-pooling
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  # REMOVIDOS username e password do bloco default.
-  # Eles serão definidos explicitamente em cada ambiente para evitar KeyError.
-  host: localhost 
+  host: localhost # Assume localhost como padrão, será sobrescrito em produção
 
 development:
   <<: *default
   database: catalogo_filmes_development
-  username: felipe
-  password: <%= ENV.fetch("DB_PASSWORD_TEST", "your_development_password") %> # Adicionado fallback para desenvolvimento
+  username: felipe # O usuário do banco de dados para o ambiente de desenvolvimento
+  # Para o ambiente de desenvolvimento, a senha é opcional se não configurada no PostgreSQL local.
+  # Usamos ENV.fetch com um valor padrão para evitar erros se a variável não estiver definida.
+  password: <%= ENV.fetch("DB_PASSWORD_DEVELOPMENT", "") %> # Use ENV["DB_PASSWORD_DEVELOPMENT"] ou vazio
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
   <<: *default
   database: catalogo_filmes_test
-  username: felipe
-  password: <%= ENV.fetch("DB_PASSWORD_TEST", "a_dummy_password_for_test") %> # Já estava correto com fallback
+  username: felipe # O usuário do banco de dados para o ambiente de teste
+  # Para o ambiente de teste, a senha também é opcional para setups locais.
+  # Usamos ENV.fetch com um valor padrão para evitar erros se a variável não estiver definida.
+  password: <%= ENV.fetch("DB_PASSWORD_TEST", "") %> # Use ENV["DB_PASSWORD_TEST"] ou vazio
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -61,13 +60,14 @@ production:
   primary: &primary_production
     <<: *default
     database: catalogo_filmes_production
-    username: catalogo_filmes
-    # Alterado para ENV.fetch para maior segurança.
-    # Em produção, se essa variável não estiver definida, é melhor que o app falhe.
+    username: catalogo_filmes # Um usuário específico e seguro para produção
+    # Em produção, a senha é CRÍTICA. Usamos ENV.fetch sem um fallback,
+    # o que fará o aplicativo FALHAR se a variável não estiver definida.
+    # Isso é intencional para segurança.
     password: <%= ENV.fetch("CATALOGO_FILMES_DATABASE_PASSWORD") %>
-    # Adicionado host como variável de ambiente, conforme discutido anteriormente.
-    # O "localhost" é um fallback se DATABASE_HOST_PRODUCTION não estiver definido,
-    # mas em produção você DEVE definir isso.
+    # O host do banco de dados em produção quase nunca é localhost.
+    # Você deve definir DATABASE_HOST_PRODUCTION no Render.
+    # Um fallback para localhost é dado, mas você deve SUBSTITUÍ-LO.
     host: <%= ENV.fetch("DATABASE_HOST_PRODUCTION", "localhost") %>
   cache:
     <<: *primary_production
